--- a/app/src/main/res/layout/activity_view_cart.xml
+++ b/app/src/main/res/layout/activity_view_cart.xml
@@ -49,6 +49,38 @@
             android:layout_alignParentStart="true">
 
             <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/tv_chargrss"
+                android:layout_alignBottom="@+id/tv_chargrss"
+                android:layout_alignEnd="@+id/textView6"
+                android:layout_marginLeft="5dp"
+                android:layout_toEndOf="@+id/tv_chargrss"
+                android:text="@string/coln" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="@string/coln"
+                android:layout_alignParentTop="true"
+                android:layout_alignEnd="@+id/textView7"
+                android:layout_toEndOf="@+id/tv_items" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/tableNo"
+                android:layout_alignEnd="@+id/textView6"
+                android:layout_below="@+id/cb_take_away"
+                android:layout_marginLeft="5dp"
+                android:gravity="center"
+                android:text="@string/coln" />
+
+            <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -57,27 +89,6 @@
                 android:text="@string/coln"
                 android:layout_marginLeft="5dp"
                 android:layout_below="@+id/tv_chargrss" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/tableNo"
-                android:text="@string/coln"
-                android:layout_marginLeft="5dp"
-                android:gravity="center"
-                android:layout_below="@+id/cb_take_away"
-                android:layout_alignEnd="@+id/textView6" />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/tv_items"
-                android:layout_toEndOf="@+id/tv_items"
-                android:text="@string/coln"
-                android:layout_marginLeft="5dp"
-                android:layout_alignParentTop="true" />
 
             <TextView
                 android:id="@+id/tv_items"
@@ -97,15 +108,14 @@
                 android:id="@+id/tv_chargrss"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/tv_items"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_alignRight="@+id/tv_items"
                 android:layout_below="@+id/tv_items"
                 android:layout_marginBottom="10dp"
                 android:text="@string/charges"
                 android:textColor="@color/fontColor"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:layout_alignEnd="@+id/tv_items" />
 
             <TextView
                 android:id="@+id/tv_estimated"
@@ -312,17 +322,6 @@
         </ScrollView>
 
     </RelativeLayout>
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="122dp"
-        android:layout_marginTop="61dp"
-        android:text="@string/coln"
-        android:layout_marginLeft="10dp"
-        android:layout_below="@+id/titel_na"
-        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
